--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.WeatherForecast"
         tools:targetApi="31">
         <activity
-            android:name=".search"
+            android:name=".future"
             android:exported="false" />
         <activity
             android:name=".main"
